force-app/main/default/objects/DureeGarantiesProduit__c/DureeGarantiesProduit__c.object-meta.xml
<CustomObject>
    <description>Objet pour les durées des différentes garantie des produits</description>
    <label>Durée des garanties produits</label>
    <nameField>
        <displayFormat>DGP/{YYYY}/{0000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Durées des garanties produits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>