force-app/main/default/objects/DureeGarantiesProduit__c/fields/CodeCategorieGarantieTexte__c.field-meta.xml
<CustomField>
    <fullName>CodeCategorieGarantieTexte__c</fullName>
    <formula>codeGarantie__r.categorie__r.code__c</formula>
    <label>Code Catégorie Garantie Texte</label>
    <type>Text</type>
</CustomField>