force-app/main/default/objects/DureeGarantiesProduit__c/fields/codeGarantie__c.field-meta.xml
<CustomField>
    <fullName>codeGarantie__c</fullName>
    <label>Code garantie</label>
    <referenceTo>Garantie__c</referenceTo>
    <relationshipLabel>Durées des garanties produits</relationshipLabel>
    <relationshipName>DureeGarantieProduit</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>