force-app/main/default/objects/DureeGarantiesProduit__c/fields/CodeGarantieTexte__c.field-meta.xml
<CustomField>
    <fullName>CodeGarantieTexte__c</fullName>
    <formula>codeGarantie__r.code__c</formula>
    <label>Code Garantie Texte</label>
    <type>Text</type>
</CustomField>