force-app/main/default/objects/DureeGarantiesProduit__c/fields/codeProduit__c.field-meta.xml
<CustomField>
    <fullName>codeProduit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Code produit</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Durées des garanties produits</relationshipLabel>
    <relationshipName>DureeGarantieProduit</relationshipName>
    <type>Lookup</type>
</CustomField>