force-app/main/default/objects/DureeGarantiesProduit__c/fields/duree__c.field-meta.xml
<CustomField>
    <fullName>duree__c</fullName>
    <inlineHelpText>En année</inlineHelpText>
    <label>Durée</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>