force-app/main/default/objects/DureeGarantiesProduit__c/fields/LibelleCategorieGarantieTexte__c.field-meta.xml
<CustomField>
    <fullName>LibelleCategorieGarantieTexte__c</fullName>
    <formula>codeGarantie__r.categorie__r.libelle__c</formula>
    <label>Libellé Catégorie Garantie Texte</label>
    <type>Text</type>
</CustomField>