force-app/main/default/objects/DureeGarantiesProduit__c/fields/LibelleGarantieTexte__c.field-meta.xml
<CustomField>
    <fullName>LibelleGarantieTexte__c</fullName>
    <formula>codeGarantie__r.libelle__c</formula>
    <label>Libellé Garantie Texte</label>
    <type>Text</type>
</CustomField>