force-app/main/default/objects/DureeGarantiesProduit__c/listViews/Garanties_Argon.listView-meta.xml
<ListView>
    <fullName>Garanties_Argon</fullName>
    <columns>NAME</columns>
    <columns>LibelleCategorieGarantieTexte__c</columns>
    <columns>codeProduit__c</columns>
    <columns>codeGarantie__c</columns>
    <columns>code__c</columns>
    <columns>duree__c</columns>
    <columns>dateDebutValidite__c</columns>
    <columns>dateFinValidite__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProductCode__c</field>
        <operation>contains</operation>
        <value>MED</value>
    </filters>
    <label>Garanties Argon</label>
</ListView>